# cxx-sdl-template

./: .gitignore  CMakeLists.txt  README.md
include/: sdl_template.hpp  sdl_template_cfg.in  sdl_template_interwork.hpp
src/: sdl_template.cpp  sdl_template_interwork.cpp
